# inferencesim

./: CALIBRATION.md  DES_todo.md  MANIFEST.in  PARALLELISM.md  README.md  SPECULATIVE.md  pyproject.toml
artifacts/: README.md  deepseek-v3-gb300-nvl72.html  llama-3.1-70b-gb300-nvl72.html
inferencesim/: __init__.py  bridge.py  calibration.py  cli.py  collectives.py  des.py  efficiency.py  engine.py  graph.py  graphdes.py  hardware.py  ops.py  presets.py  presets_fine.py  presets_spec.py  replay.py  report.py  sched.py  serve.py  simulate.py  units.py  viewer.html  workload.py
tests/: test_attention_variants.py  test_collectives.py  test_context_parallel.py  test_dep.py  test_des.py  test_efficiency.py  test_expand.py  test_graph.py  test_graphdes.py  test_hardware.py  test_mesh.py  test_parallelism.py  test_presets_spec.py  test_replay.py  test_roofline.py  test_sched.py  test_serve.py  test_serve_disagg.py  test_ui_cli.py  test_workload.py
